
1.9.3 (2011-11-??)
 + Custom map source from local tiles XML schema changed: 
    new <sourceType> values: DIR_ZOOM_X_Y, DIR_ZOOM_Y_X, QUADKEY
    removed flipXYDirs (use <sourceType>DIR_ZOOM_Y_X</sourceType> instead
 ! Custom map source from ZIPs: Handling for atlas types with two file 
    extensions fixed
 ! Bugfix Osmdroid SQlite: PRIMARY KEY must be unique (#3438206)

1.9.2 (2011-10-12)
 + Custom map source from ZIP/files in file-system: added possibility to invert
   y coordinate via "invertYCoordinate" like it is used by MapTiler
 + New settings.xml option: <downloadRetryCount> (default 1). Allows to reduce 
    or increase the maximum attempts MOBAC tries to download a tile in case 
    of errors occur while download or HTTP response is not as expected.
 + Logging verboseness now configurable for the current session via GUI  
 ! PaperAtlas: NullPointerException when WGS Grid=off has been fixed
 + CustomSQLite atlas as map source: OSMAND format added
 + New atlas output format: OSMAND SQLite


1.9.1 (2011-09-09) 
 ! Opening settings dialog: ClassCastException on Linux/OpenJDK
 ! Custom SQlite atlas as map source fixed for atlas formats AndNav, 
    BackCountry Navigator and Osmand 
 + Background color for BeanShell map sources can be specified by adding
    backgroundColor = "#ffffff"; 
 ! Custom SQLite atlas as map source had an undefined tileImageType;
    Added auto-detection and user defined <tileImageType> 

1.9 (2011-08-18) 
 ! Calculation problem in MGMaps atlas format (fix by Pierre-Luc Paour)
 ! Custom mapsource from RMaps SQLite atlas shows wrong zoom levels 
 - Removed map source: Open Cycle Map (request by Andy Allan)
 + New map source: OSMapa-Topo (Poland)
 + Map source tile store coverage: button for hiding colored layer added
 + OziExplorer/Trekbuddy: MM1B calculation improved (patch by MrPete #3026830)
 + Custom XML map source: {$serverpart} / <serverParts> implemented for 
    balancing load among multiple servers with different DNS names